# pktana

./: .gitignore  .gittopics  CHANGELOG.md  CNAME  Cargo.toml  LICENSE  Makefile  NEW_FEATURES.md  README.md  index.html  index_bak.html  index_v2.html  release.conf
.github/workflows/: ci.yml  pages.yml  placeholder.txt
crates/pktana-cli/: Cargo.toml
crates/pktana-cli/src/: main.rs  tui.rs  tui_old.rs
crates/pktana-core/: Cargo.toml
crates/pktana-core/src/: buffer_pool.rs  capture.rs  connections.rs  dpi.rs  ethtool.rs  flow.rs  geoip.rs  lib.rs  nic.rs  packet.rs  parser.rs  process.rs  routes.rs
deploy/centos/: install.sh  pktana.spec
docs/: CNAME  architecture.md
scripts/: build-release.sh  build-rpm.sh  package-centos.sh  sign-release.sh
