[package]
name        = "pktana-cli"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
description = "CLI binary for pktana — Linux packet analyser & network inspector"
repository.workspace  = true
readme.workspace      = true
keywords.workspace    = true
categories.workspace  = true

[features]
default = []
pcap = ["pktana-core/pcap"]
tui = ["dep:ratatui", "dep:crossterm"]

[dependencies]
pktana-core = { path = "../pktana-core", version = "0.3.0" }
ratatui    = { version = "0.29", optional = true }
crossterm  = { version = "0.28", optional = true }

[[bin]]
name = "pktana"
path = "src/main.rs"
